2005-03-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-toshiba.el (Toplevel): Add 'require cl' when compiling.
	(shimbun-toshiba-from-address): New variable.
	(shimbun-get-headers): New method define.

2005-03-12  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-plucker.el (shimbun-plucker-litemplate-regexp): Improve Regexp.
	(shimbun-plucker-extract-header-values): Fix supporting new regexp.

	* shimbun/sb-orca.el (shimbun-orca-url): Improve url.
	(shimbun-orca-litemplate-regexp): Improve Regexp.

2005-03-12  MIYOSHI Masanori  <miyoshi@meadowy.org>

	* shimbun/sb-msports-nifty.el: Follow the change of site design.

	* shimbun/sb-f1express.el: Removed.

	* shimbun/sb-f1fan.el: Update the email address of the author.

	* shimbun/sb-makanai.el: Ditto.

	* shimbun/sb-nikkansports.el: Ditto.

	* doc/emacs-w3m-ja.texi (Sport Sites Supported by Shimbun): Update.

	* doc/emacs-w3m.texi (Sport Sites Supported by Shimbun): Ditto.

2005-03-11  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-squeak-ja.el (shimbun-squeak-ja-url): Improve url.

	* shimbun/sb-squeak-dev.el (shimbun-squeak-dev-url): Ditto.

	* shimbun/sb-sml.el (shimbun-sml-url): Ditto.

	* shimbun/sb-pilot-mailsync.el (shimbun-pilot-mailsync-url): Ditto.

	* shimbun/sb-pilot-link.el (shimbun-index-url): Improve url generating rule.

2005-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-tcup.el (shimbun-tcup-group-alist): Revert; update
	urls; add the time-lag parameter.
	(shimbun-tcup-coding-system): Remove:
	(shimbun-get-headers): Use it instead of shimbun-headers; fetch
	old articles; adjust date according to the time-lag parameter.
	(shimbun-article): Protect against missing contents.

2005-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-tcup.el (shimbun-tcup-group-alist): Add the coding
	system parameter; set it as shift_jis for the yutopia group.
	(shimbun-tcup-subject-regexp): Improve regexp.
	(shimbun-tcup-from-start-regexp): Ditto.